Add report new sighting functionality